--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,13 @@
 </dependency>
 
 
- 
+  
+    <!-- WebDriverManager -->
+    <dependency>
+        <groupId>io.github.bonigarcia</groupId>
+        <artifactId>webdrivermanager</artifactId>
+        <version>5.6.2</version>
+    </dependency>
  
   </dependencies>
 </project>
