--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,12 @@
   <name>testng</name>
   <url>http://maven.apache.org</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+ <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
+    
+
 
   <dependencies>
 	  <dependency>
@@ -54,6 +57,9 @@
             <version>3.12.0</version>
         </dependency>
   	
+  	   <!-- Log4j2 dependency -->
+
+
   <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
 <dependency>
     <groupId>org.apache.logging.log4j</groupId>
@@ -91,5 +97,21 @@
         <version>5.6.2</version>
     </dependency>
  
+ <!-- ExtentReports dependency -->
+    <dependency>
+        <groupId>com.aventstack</groupId>
+        <artifactId>extentreports</artifactId>
+        <version>5.0.9</version>
+    </dependency>
+
+ 
+
+    <!-- Allure TestNG dependency -->
+    <dependency>
+        <groupId>io.qameta.allure</groupId>
+        <artifactId>allure-testng</artifactId>
+        <version>2.20.1</version>
+    </dependency>
+    
   </dependencies>
 </project>
