--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,13 @@
 
   <dependencies>
 	  <dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.28</version> <!-- Use the latest version available -->
+    <scope>provided</scope>
+</dependency>
+
+	  <dependency>
     <groupId>org.slf4j</groupId>
     <artifactId>slf4j-simple</artifactId>
     <version>1.7.36</version>
@@ -114,4 +121,23 @@
     </dependency>
     
   </dependencies>
+  
+  
+  
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <source>17</source>
+          <target>17</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+  
+ 
+
 </project>
