--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,3 +1,3 @@
-username=mathumthanya
-password=mathumthanya1
-confirmPassword=mathumthanya1
+username=maumanya
+password=mathanya1
+confirmPassword=mathanya1
