--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,3 +1,3 @@
-username=maumanya
-password=matuhanya1
-confirmPassword=matuhanya1
+username=mauhunya
+password=matuanya12
+confirmPassword=matuanya12
