--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,3 +1,3 @@
-username=mauhunya
-password=matuanya12
-confirmPassword=matuanya12
+username=seleniummathu
+password=ninjanumpy
+confirmPassword=ninjanumpy
