--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,3 +1,3 @@
-username=seleniummathu
-password=ninjanumpy
-confirmPassword=ninjanumpy
+username=selenimmathu
+password=ninjaumpy
+confirmPassword=ninjaumpy
