--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,3 +1,3 @@
-username=selenimmathanubbb
-password=ninjaumpy
-confirmPassword=ninjaumpy
+username=selenimanubbb
+password=ninjazmpy
+confirmPassword=ninjazmpy
